fluxengine-local-test/src/test/dsl/junit/InternalTestProjectの移行/error/20190322/rule/AC21CampainNameCheckRule.dsl
test 1 キャンペーンが1件投入する場合:
   2019/02/14 21:00:00:
       AC21CampainNameCheckEvent:
           media: "YSS"              # 媒体
           adProjectSeq: 26002       # 広告案件SEQ
           adProject: "広告案件２１" # 広告案件
           accountId: 100            # アカウントID
           campaignId: 200           # キャンペーンID
test 2 キャンペーンが複数件投入する場合:
   2019/02/14 21:01:00:
       AC21CampainNameCheckEvent:
           media: "GAW"              # 媒体
           adProjectSeq: 26002       # 広告案件SEQ
           adProject: "広告案件２１" # 広告案件
           accountId: 102            # アカウントID
           campaignId: 202           # キャンペーンID
   2019/02/14 21:02:00:
       AC21CampainNameCheckEvent:
           media: "YDN"              # 媒体
           adProjectSeq: 26002       # 広告案件SEQ
           adProject: "広告案件２１" # 広告案件
           accountId: 103            # アカウントID
           campaignId: 203           # キャンペーンID